used URI constructor, since java.net.URL constructors are deprecated since Java 20